<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="35dp"
    android:paddingBottom="35dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@drawable/bg_rateus_dialog"
    android:layout_height="wrap_content">


    <TextView
        android:textColor="@color/colorWhite1"
        android:textSize="16dp"
        android:text="@string/confirm_close_scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite1"
            android:background="@drawable/bg_left_btn"
            android:gravity="center"
            android:layout_width="120dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_right_btn"
            android:text="@string/ok"
            android:textColor="@color/colorCancel"
            android:gravity="center"
            android:layout_width="120dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</LinearLayout>